@@ -289,6 +289,8 @@ Unreleased changes (1.0-dev)
 106. NUTCH-663 - Upgrade Nutch to use Hadoop 0.19 (kubes)
 
 107. NUTCH-647 - Resolve URLs tool (kubes)
+
+108. NUTCH-665 - Search Load Testing Tool (kubes)
      
 Release 0.9 - 2007-04-02
 
